# nitterbot

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
nitterbot/: __init__.py  __main__.py  bot.py  mastodon.py  nitterbot.py  notifylistener.py  parser.py  status.py
tests/: conftest.py  test_nitterbot.py
