[tool.poetry]
name = "nitterbot"
version = "0.1.0"
description = ""
authors = ["Alex Yule <adyule@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
mastodon-py = "^1.8.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
